# reportbuilder

./: .gitignore  COMPLETION_STATUS.md  IMPROVEMENT_PLAN.md  README.md  TESTER_CHECKLIST.md  pyproject.toml  requirements-ai.txt  requirements-dev.txt  requirements.txt  run.py
docs/: RELEASE_NOTES.md  TESTING.md
fixtures/: README.md
scripts/: build.py  run_dev.sh  run_tests.sh
src/reportbuilder/: __init__.py  app.py  config.py
src/reportbuilder/ai/: __init__.py  model_manager.py  planner.py  schemas.py
src/reportbuilder/analytics/: __init__.py  engine.py
src/reportbuilder/ingestion/: __init__.py  scanner.py  watcher.py  zip_handler.py
src/reportbuilder/normalization/: __init__.py  resolvers.py
src/reportbuilder/parsing/: __init__.py  base.py  daily_tech_performance.py  detector.py  mca_snapshot.py  mileage_csv.py
src/reportbuilder/reports/: __init__.py  pdf_renderer.py  registry.py
src/reportbuilder/reports/templates/: __init__.py  executive_pdf.py  snapshot_vs_performance.py  team_efficiency_tenure.py  trend_focus.py
src/reportbuilder/ui/: __init__.py  main_window.py  setup_wizard.py
src/reportbuilder/warehouse/: __init__.py  migrations.py  models.py  repository.py
tests/: conftest.py  test_ai.py  test_analytics.py  test_config.py  test_hardening.py  test_ingestion.py  test_parsers.py  test_release_hardening.py  test_reports.py  test_truth_correctness.py  test_warehouse.py
