[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "reportbuilder"
version = "1.0.0"
description = "Desktop app for continuous report ingestion, warehousing, trend analysis, and generation"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "SQLAlchemy>=2.0",
    "pandas>=2.1",
    "openpyxl>=3.1",
    "XlsxWriter>=3.1",
    "reportlab>=4.0",
    "watchdog>=3.0",
]

[project.optional-dependencies]
ai = [
    "onnxruntime>=1.16",
    "transformers>=4.36",
    "tokenizers>=0.15",
]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.2",
    "pytest-cov>=4.1",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
reportbuilder = "reportbuilder.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
